<resources>
    <string name="app_name">Box25</string>
    <string name="facebook_application_id">626713688188818</string>
    <string name="facebook_login_protocol_scheme">fb626713688188818</string>


    <!--    Image Descriptions-->
    <string name="logo_description">Box25 Logo</string>
    <!--    For On-boarding Activity Text-->
    <string name="welcome_title_1_onboarding">Welcome to Box25!</string>
    <string name="welcome_text_1_onboarding">The Pomodoro Powered Productivity App! A task manager that rewards you for your focus! </string>

    <string name="welcome_title_2_onboarding">What is Pomodoro?</string>
    <string name="welcome_text_2_onboarding">Pomodoro refers to a tomato in Italian! The pomodor technique was developed by Fancesco Cirillo who used a tomato-shaped kitchen timer at the time.\n\nHow it works:\nUse a timer to break down work into intervals with short breaks in between. \nSimple right? It is! \nIt is also mighty when combined with task scheduling.</string>
    <string name="welcome_title_3_onboarding">Lets Get Started!</string>
    <string name="welcome_text_3_onboarding">To get started, simply signup after this screen, create your first task and get going! \n\nWe also have additional documentation that you can access at any time by clicking the help button in the menu on the next screen! </string>

    <!--    For Login & Sign-up Activity-->
    <string name="login_title">LOGIN</string>
    <string name="get_started_button_text">Get Started!</string>
    <string name="add_new_task_button_string">Add new task</string>
    <string name="search">search</string>
    <string name="search_tasks">search tasks</string>

    <dimen name="indicator_size">4dp</dimen>

</resources>