<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/item_view_pager_image"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/check_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_view_pager_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/welcome_title_1_onboarding"
        android:textAlignment="center"
        android:textAppearance="@style/onboarding_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_view_pager_image" />

    <TextView
        android:id="@+id/item_view_pager_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_text_1_onboarding"
        android:textAppearance="@style/onboarding_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_view_pager_title" />



</androidx.constraintlayout.widget.ConstraintLayout>